--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+    background: #000;
+    width: 100%;
+    height: 100%;\
+    overflow: hidden;
 }
+
 
 .builder {
   position: absolute;
