--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-    background: #000;
+    background: #fff;
     width: 100%;
     height: 100%;\
     overflow: hidden;
@@ -15,5 +15,4 @@ body {
   bottom: 0;
   right: 0;
   left: 0;
-  overflow: scroll;
 }
