--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-    background: #fff;
+    background: #333;
     width: 100%;
     height: 100%;\
     overflow: hidden;
